--- a/src/app/messages/messages.component.scss
+++ b/src/app/messages/messages.component.scss
@@ -32,6 +32,7 @@ button.clear {
   cursor: pointer;
   cursor: hand;
   @include transition-100(100ms);
+  user-select: none;
   &:hover {
     background-color: #ff7675;
     font-size: 32px;
