--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -1,11 +1,4 @@
-@mixin transition-100($ms) {
-  transition: all $ms ease-in-out;
-}
-
-.selected {
-  background-color: #cfd8dc !important;
-  color: white;
-}
+/* HeroesComponent 컴포넌트에 적용되는 CSS 스타일 */
 .heroes {
   margin: 0 0 2em 0;
   list-style-type: none;
@@ -13,32 +6,33 @@
   width: 15em;
 }
 .heroes li {
-  cursor: pointer;
   position: relative;
-  left: 0;
+  cursor: pointer;
   background-color: #eee;
   margin: 0.5em;
   padding: 0.3em 0;
   height: 1.6em;
   border-radius: 4px;
-  @include transition-100(100ms);
 }
-.heroes li.selected:hover {
-  background-color: #bbd8dc !important;
-  color: white;
-  left: 6px;
-  @include transition-100(100ms);
-}
+
 .heroes li:hover {
   color: #607d8b;
   background-color: #ddd;
-  left: 6px;
-  @include transition-100(100ms);
+  left: 0.1em;
 }
-.heroes .text {
+
+.heroes a {
+  color: #333;
+  text-decoration: none;
   position: relative;
-  top: -3px;
+  display: block;
+  width: 250px;
 }
+
+.heroes a:hover {
+  color: #607d8b;
+}
+
 .heroes .badge {
   display: inline-block;
   font-size: small;
@@ -50,6 +44,30 @@
   left: -1px;
   top: -4px;
   height: 1.8em;
+  min-width: 16px;
+  text-align: right;
   margin-right: 0.8em;
   border-radius: 4px 0 0 4px;
+}
+
+button {
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  cursor: hand;
+  font-family: Arial;
+}
+
+button:hover {
+  background-color: #cfd8dc;
+}
+
+button.delete {
+  position: relative;
+  left: 194px;
+  top: -32px;
+  background-color: gray !important;
+  color: white;
 }
